@@ -1,5 +1,7 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+8/45/14: Allowed File-Extract in 3dmod to be run on non-MRC files (In 4.7).
+
 8/3/14: IMOD_4-8-10
 8/3/14: Subdivided steps in Batchruntomo so CTF plotting and 3D gold
 finding could be checked at one stopping point; eliminated option to switch
